--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -6,8 +6,8 @@
 
 :root {
   --primary: #121212;
-  --secondary: #fefefe;
-  --background: #f9f9f9;
+  --secondary: #f9f9f9;
+  --background: #fefefe;
   --foreground: #f9f9f9;
   --main: #444444;
   --muted: #777;
@@ -66,7 +66,7 @@ button,
 }
 
 .input {
-  @apply bg-foreground text-sm border border-line rounded-lg px-4 h-10 font-light focus:outline-none focus:border-primary invalid:border-red-500;
+  @apply bg-secondary text-sm border border-line rounded-lg px-4 h-10 font-light focus:outline-none focus:border-primary invalid:border-red-500;
 }
 .message {
   @apply bg-foreground text-sm border border-line rounded-lg px-4 py-2 font-light focus:outline-none focus:border-primary invalid:border-red-500;
